{{ $NEXT }}

0.08      2010-08-02 11:00

    - added 'andThen' method, a shortcut for `.then().now()`
    
    - the synchronization point of AND will receive several arguments instead of a array

0.07      2010-07-05 19:18

    - test suite now passes on the NodeJS platform

0.06      2010-06-25 09:42

    - somehow the 0.05 release didn't appear on JSAN, re-releasing

0.05      2010-06-24 13:30

    - fixed bug, when the already leaved continuation instance could be
      picked up during implicit methods chaining

0.04      2010-06-23 14:12

    - re-released with correct requirements format in META.json, no other changes

0.03      2010-06-14 19:57

    - switched to Dist::Zilla for distribution management

0.02   .........

    [ENHANCEMENTS]
    
     
    
    [API CHANGES]

    -none-
    

    [BUG FIXES]
    
    - fixed bug, when thrown exception wasn't being propagated from nested statements 

0.01   .........

    Initial release