@@ -28,22 +28,25 @@ Class('JooseX.CPS.Builder', {
     
         after : function (meta, info) {
             Joose.O.each(info, function (value, name) {
+                
                 meta.addMethodModifier(name, value, JooseX.CPS.MethodModifier.After)
-            }, this)
+            })
         },
         
         
         before : function (meta, info) {
             Joose.O.each(info, function (value, name) {
+                
                 meta.addMethodModifier(name, value, JooseX.CPS.MethodModifier.Before)
-            }, this)
+            })
         },
         
         
         override : function (meta, info) {
             Joose.O.each(info, function (value, name) {
+                
                 meta.addMethodModifier(name, value, JooseX.CPS.MethodModifier.Override)
-            }, this)
+            })
         },
         
         
