@@ -1,4 +1,4 @@
-Class('JooseX.CPS.Continuation', {
+    Class('JooseX.CPS.Continuation', {
     
     has : {
         parent          : null,
@@ -13,6 +13,9 @@ Class('JooseX.CPS.Continuation', {
         defaultScope    : null,
         
         nextFunc        : null,
+        
+        // re-entry func is analog of "nextFunc" for inter-statements control flow tranfers into single continuation (sequential runcore)
+        reEntryFunc     : null,
         
         catchFunc       : null,
         catchScope      : null,
@@ -43,8 +46,10 @@ Class('JooseX.CPS.Continuation', {
         },
         
         
-        getNextFunc : function () {
-            return this.nextFunc || this.parent && this.parent.getNextFunc()
+        getNextFunc : function (doNotReEntry) {
+            var parent = this.parent
+            
+            return !doNotReEntry && this.reEntryFunc || this.nextFunc || parent && parent.getNextFunc()
         },
         
         
@@ -64,6 +69,7 @@ Class('JooseX.CPS.Continuation', {
         },
         
         
+        
         runCoreSequential : function () {
             var me          = this
             var statements  = this.statements
@@ -71,18 +77,23 @@ Class('JooseX.CPS.Continuation', {
             if (statements.length) {
                 var statement = statements.shift()
                 
+                var reEntryFunc = this.reEntryFunc = function () {
+                    me.runCoreSequential.apply(me, arguments)
+                }
+                
                 var child = this.deriveChild({
                     defaultScope    : statement.scope,
                     
-                    nextFunc        : function () {
-                        me.runCoreSequential.apply(me, arguments)
-                    }
+                    nextFunc        : reEntryFunc
                 })
                 
                 this.run(statement.func, statement.scope, statement.args || arguments, child)
                 
-            } else
+            } else {
+                delete this.reEntryFunc
+                
                 this.leave.apply(this, arguments)
+            }
         },
         
         
@@ -100,19 +111,19 @@ Class('JooseX.CPS.Continuation', {
                 
                 me.deriveChild().TRY(statement.func, statement.scope, statement.args || args).THEN(function () {
                     
-                    counter++
                     results[ index ] = arguments
                     
                     this.CONT.CONTINUE()
                     
                 }).CATCH(function () {
                     
-                    counter++
                     results[ index ] = arguments
                     
                     this.CONT.CONTINUE()
                     
                 }).FINALLY(function () {
+                    
+                    counter++
                         
                     if (counter == length) me.leave.apply(me, results)
                 }).NOW()
@@ -174,6 +185,7 @@ Class('JooseX.CPS.Continuation', {
 
             this.leaved         = true
             
+            
             var nextFunc        = this.getNextFunc()
             if (nextFunc) nextFunc.apply(Joose.top, args)
         },
@@ -181,14 +193,17 @@ Class('JooseX.CPS.Continuation', {
         
         THROW : function (exception) {
             var args        = arguments
+
+            // remove the `reEntryFunc` (if any) as we aren't supposed to return the sequential flow after THROW 
+            delete this.reEntryFunc
             
             var catchFunc   = this.catchFunc
             
             if (catchFunc) {
                 delete this.catchFunc
                 
+                var me          = this
                 var catchScope      = this.catchScope
-                var me              = this
                 
                 var catchStatement = this.deriveChild({
                     defaultScope    : catchScope,
@@ -225,7 +240,7 @@ Class('JooseX.CPS.Continuation', {
         
         
         RETURN : function () {
-            if (this.parent) this.nextFunc = this.parent.getNextFunc()
+            if (this.parent) this.nextFunc = this.parent.getNextFunc(true)
             
             return this.leave.apply(this, arguments)
         },
