@@ -3,9 +3,7 @@ Role('JooseX.CPS.ControlFlow', {
     use : [ 'JooseX.CPS.Continuation' ],
     
     has : {
-        CONT            : null,
-        RESULT          : null,
-        RESULTS         : null
+        CONT            : null
     },
     
     
@@ -77,13 +75,6 @@ Role('JooseX.CPS.ControlFlow', {
         getTHROW : function () {
             return this.CONT.getTHROW()
         }
-        
-//        ,
-//        detachScope : function () {
-//            this.CONT = new JooseX.CPS.Continuation()
-//            
-//            return this
-//        }
         
     }
     //eof methods
